manifests/production/infrastructure/controllers/trust-manager/apps_v1_deployment_trust-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: trust-manager
    app.kubernetes.io/name: trust-manager
  name: trust-manager
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trust-manager
  template:
    metadata:
      labels:
        app: trust-manager
        app.kubernetes.io/instance: trust-manager
        app.kubernetes.io/name: trust-manager
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --tls-min-version=
        - --tls-cipher-suites=
        - --log-format=text
        - --log-level=1
        - --metrics-port=9402
        - --readiness-probe-port=6060
        - --readiness-probe-path=/readyz
        - --leader-elect=true
        - --leader-election-lease-duration=15s
        - --leader-election-renew-deadline=10s
        - --trust-namespace=cert-manager
        - --webhook-host=0.0.0.0
        - --webhook-port=6443
        - --webhook-certificate-dir=/tls
        - --default-package-location=/packages/cert-manager-package-debian.json
        image: quay.io/jetstack/trust-manager:v0.17.0
        imagePullPolicy: IfNotPresent
        name: trust-manager
        ports:
        - containerPort: 6443
          name: webhook
        - containerPort: 9402
          name: metrics
        readinessProbe:
          httpGet:
            path: /readyz
            port: 6060
          initialDelaySeconds: 3
          periodSeconds: 7
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tls
          name: tls
          readOnly: true
        - mountPath: /packages
          name: packages
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: trust-manager
      volumes:
      - emptyDir:
          sizeLimit: 50M
        name: packages
      - name: tls
        secret:
          defaultMode: 420
          secretName: trust-manager-tls
