manifests/production/infrastructure/controllers/trust-manager/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_trust-manager.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cert-manager/trust-manager
  labels:
    app: trust-manager
    app.kubernetes.io/instance: trust-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trust-manager
    app.kubernetes.io/version: v0.15.0
    helm.sh/chart: trust-manager-v0.15.0
  name: trust-manager
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: trust-manager
      namespace: cert-manager
      path: /validate-trust-cert-manager-io-v1alpha1-bundle
  failurePolicy: Fail
  name: trust.cert-manager.io
  rules:
  - apiGroups:
    - trust.cert-manager.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*/*'
  sideEffects: None
  timeoutSeconds: 5
